--- a/Classes/InCall.storyboard
+++ b/Classes/InCall.storyboard
@@ -141,6 +141,10 @@
                                     <constraint firstAttribute="height" constant="23" id="UXJ-pG-DVq"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KnW-eL-D0c" customClass="CallInfoView">
+                                <rect key="frame" x="18" y="113" width="338" height="240"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
@@ -148,6 +152,7 @@
                             <constraint firstItem="8w2-q5-8wx" firstAttribute="top" secondItem="2HI-Bp-9qL" secondAttribute="bottom" constant="-50" id="27I-I9-kS4"/>
                             <constraint firstItem="qgE-uq-Pbv" firstAttribute="top" secondItem="8w2-q5-8wx" secondAttribute="bottom" constant="40" id="5o4-IW-zgJ"/>
                             <constraint firstItem="cto-wd-TgW" firstAttribute="centerX" secondItem="dGF-2k-5Y3" secondAttribute="centerX" id="A9c-UV-KDB"/>
+                            <constraint firstItem="KnW-eL-D0c" firstAttribute="centerX" secondItem="dGF-2k-5Y3" secondAttribute="centerX" id="DXD-IV-wAt"/>
                             <constraint firstItem="KQf-7a-Dtr" firstAttribute="top" secondItem="dGF-2k-5Y3" secondAttribute="topMargin" id="FLT-vk-UUP"/>
                             <constraint firstItem="qgE-uq-Pbv" firstAttribute="top" secondItem="RGY-s2-faC" secondAttribute="bottom" id="Gx2-wC-xzN"/>
                             <constraint firstAttribute="trailing" secondItem="RGY-s2-faC" secondAttribute="trailing" id="LK0-d0-3B3"/>
@@ -165,6 +170,7 @@
                             <constraint firstItem="qgE-uq-Pbv" firstAttribute="top" secondItem="cto-wd-TgW" secondAttribute="bottom" id="VLA-Wq-kPT"/>
                             <constraint firstItem="cga-Yh-tX1" firstAttribute="top" secondItem="dGF-2k-5Y3" secondAttribute="top" id="YBs-9A-qJe"/>
                             <constraint firstItem="qgE-uq-Pbv" firstAttribute="top" secondItem="zyC-b4-pSa" secondAttribute="bottom" id="YrC-VC-PnZ"/>
+                            <constraint firstItem="KnW-eL-D0c" firstAttribute="width" secondItem="dGF-2k-5Y3" secondAttribute="width" multiplier="0.9" id="Z8c-33-fvD"/>
                             <constraint firstAttribute="trailing" secondItem="KQf-7a-Dtr" secondAttribute="trailing" id="ZEs-nw-0p1"/>
                             <constraint firstAttribute="bottomMargin" secondItem="0Fx-gY-047" secondAttribute="bottom" id="c9J-BN-mNr"/>
                             <constraint firstAttribute="trailing" secondItem="opN-Qd-xDg" secondAttribute="trailing" constant="87" id="cR5-wT-mos"/>
@@ -172,6 +178,7 @@
                             <constraint firstAttribute="trailing" secondItem="0Fx-gY-047" secondAttribute="trailing" id="dCE-BQ-z79"/>
                             <constraint firstItem="qgE-uq-Pbv" firstAttribute="top" secondItem="cga-Yh-tX1" secondAttribute="bottom" id="eCm-Aa-LCH"/>
                             <constraint firstItem="Flh-2b-FH0" firstAttribute="leading" secondItem="dGF-2k-5Y3" secondAttribute="leading" id="imc-8z-HeR"/>
+                            <constraint firstItem="KnW-eL-D0c" firstAttribute="centerY" secondItem="dGF-2k-5Y3" secondAttribute="centerY" multiplier="0.7" id="jjw-ZQ-PoY"/>
                             <constraint firstItem="opN-Qd-xDg" firstAttribute="leading" secondItem="dGF-2k-5Y3" secondAttribute="leading" constant="88" id="mNq-Id-jBo"/>
                             <constraint firstItem="0Fx-gY-047" firstAttribute="leading" secondItem="dGF-2k-5Y3" secondAttribute="leading" id="mef-gd-shX"/>
                             <constraint firstItem="5T0-dS-AZx" firstAttribute="leading" secondItem="dGF-2k-5Y3" secondAttribute="leading" id="mlb-M6-qkE"/>
@@ -180,6 +187,7 @@
                             <constraint firstItem="zyC-b4-pSa" firstAttribute="width" secondItem="dGF-2k-5Y3" secondAttribute="width" multiplier="0.9" id="obd-1d-bsL"/>
                             <constraint firstItem="KQf-7a-Dtr" firstAttribute="leading" secondItem="dGF-2k-5Y3" secondAttribute="leading" id="qzK-xp-Wo1"/>
                             <constraint firstItem="cto-wd-TgW" firstAttribute="top" secondItem="YgE-gZ-e8E" secondAttribute="bottom" id="vG6-i3-YNy"/>
+                            <constraint firstItem="KnW-eL-D0c" firstAttribute="height" secondItem="dGF-2k-5Y3" secondAttribute="height" multiplier="0.36" id="vQy-jc-OEP"/>
                             <constraint firstItem="Flh-2b-FH0" firstAttribute="top" secondItem="KQf-7a-Dtr" secondAttribute="bottom" id="vS9-gS-3dN"/>
                             <constraint firstItem="RGY-s2-faC" firstAttribute="top" secondItem="YgE-gZ-e8E" secondAttribute="bottom" id="wWm-8q-5PN"/>
                             <constraint firstItem="zyC-b4-pSa" firstAttribute="centerX" secondItem="dGF-2k-5Y3" secondAttribute="centerX" id="xD0-MW-WtB"/>
@@ -192,10 +200,12 @@
                         </connections>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                     <connections>
                         <outlet property="callBarView" destination="8w2-q5-8wx" id="nFw-Ou-ZkY"/>
                         <outlet property="callBarViewBottomConstraint" destination="5o4-IW-zgJ" id="NT1-CH-Tvi"/>
+                        <outlet property="callInfoView" destination="KnW-eL-D0c" id="ZmV-Ag-S7x"/>
                         <outlet property="cameraImageView" destination="RGY-s2-faC" id="q2v-pu-UHW"/>
                         <outlet property="closeChatButton" destination="BGd-We-07U" id="Z1G-Il-X49"/>
                         <outlet property="holdByRemoteImageView" destination="opN-Qd-xDg" id="udr-gJ-LLf"/>
