--- a/Classes/CallInfoView.xib
+++ b/Classes/CallInfoView.xib
@@ -462,15 +462,15 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s0z-Oh-cAO" userLabel="avatarView">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="232"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="avatar_unknown.png" translatesAutoresizingMaskIntoConstraints="NO" id="lYL-DY-yYU" userLabel="avatarImage">
-                                    <rect key="frame" x="72" y="8" width="176" height="186"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="avatar_unknown.png" translatesAutoresizingMaskIntoConstraints="NO" id="lYL-DY-yYU" userLabel="avatarImage">
+                                    <rect key="frame" x="67" y="8" width="186" height="186"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <accessibility key="accessibilityConfiguration" label="Contact avatar">
                                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                         <bool key="isElement" value="YES"/>
                                     </accessibility>
                                     <constraints>
-                                        <constraint firstAttribute="width" secondItem="lYL-DY-yYU" secondAttribute="height" multiplier="16:17" id="vab-7J-vN8"/>
+                                        <constraint firstAttribute="width" secondItem="lYL-DY-yYU" secondAttribute="height" multiplier="1:1" id="vab-7J-vN8"/>
                                     </constraints>
                                 </imageView>
                             </subviews>
